add new photo to carousel

--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
                     </header>
                 </div>
                 <div class="carousel item">
+                    <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/wedding_L_001.jpg); background-position: 30% 80% !important">
+                        <div class="overlay-prep overlay-light"></div>
+                    </header>
+                    </div>
+                    <div class="carousel item">
                     <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/landscape_008.jpg); background-position: 52% 70% !important">
                         <div class="overlay-prep overlay-light"></div>
                     </header>
