add images to wedding page

--- a/photos.html
+++ b/photos.html
@@ -139,6 +139,10 @@
 
                 <div class="row gallery">
                     <div class="wrapper-gallery">
+                        <div class="portfolio-img-container animate-gallery"><img src="/img/wedding_002.jpg" alt="" /></div>
+                        <div class="portfolio-img-container animate-gallery"><img src="/img/wedding_004.jpg" alt="" /></div>
+                        <div class="portfolio-img-container animate-gallery"><img src="/img/wedding_003.jpg" alt="" /></div>
+
                         <div class="portfolio-img-container animate-gallery"><img src="/img/portrait_013.jpg" alt="" /></div>
                         <div class="portfolio-img-container animate-gallery"><img src="/img/portrait_004.jpg" alt="" /></div>
                         <div class="portfolio-img-container animate-gallery"><img src="/img/portrait_014.jpg" alt="" /></div>
