--- a/photos.html
+++ b/photos.html
@@ -10,8 +10,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Photos - Forrest Herman - Wedding Photographer + Filmmaker</title>
-    <link rel="icon" href="img/fh-white.png" id="light-scheme-icon" />
-    <!-- <link rel="icon" href="img/fh-black.png" id="dark-scheme-icon" /> -->
+    <link rel="icon" href="assets/favicon.png" id="light-scheme-icon" />
+    <!-- <link rel="icon" href="assets/favicon-black" id="dark-scheme-icon" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Wedding Photographer + Filmmaker in North Bay, ON. Capturing visuals as timeless as your memories." />
     <meta name="keywords" content="photo, film, wedding, wedding photography, photography, filmmaking, couple photos, photos" />
@@ -89,7 +89,7 @@
                     <div class="col-xs-2 col-nav">
                         <div id="fh5co-logo">
                             <a href="index">
-                                <img id="logo" src="img/forrest-herman-black.png" alt="logo" />
+                                <img id="logo" src="assets/forrest-herman-black.png" alt="logo" />
                             </a>
                         </div>
                     </div>
