--- a/pricing/wedding-pricing.html
+++ b/pricing/wedding-pricing.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wedding Pricing - Forrest Herman - Wedding Photographer + Filmmaker</title>
-    <link rel="icon" href="img/fh-white.png" id="light-scheme-icon" />
+    <link rel="icon" href="assets/favicon.png" id="light-scheme-icon" />
 
 
     <!-- Theme style  -->
@@ -106,7 +106,7 @@
                 </div>
                 <div class="col-md-4 footer-logo img-container display-flex-row justify-center">
                     <a href="index">
-                        <img id="footer-logo" src="/img/forrest-herman-black.png" alt="logo" />
+                        <img id="footer-logo" src="/assets/forrest-herman-black.png" alt="logo" />
                     </a>
                 </div>
                 <div class="col-md-4 margin-auto">
