--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
                                                 <img class="testimonial-img" style="object-position: center bottom" src="img/profiles/testimonial_katy_kevin.jpg" alt="user" />
                                             </figure>
                                             <span>Katy & Kevin</span>
+                                            <span>2020</span>
                                             <blockquote>
                                                 <p>
                                                     Forrest covered our wedding day, and we could not recommend his
@@ -300,30 +301,32 @@
                                         <div class="testimony-slide active text-center">
                                             <figure>
                                                 <img class="testimonial-img" style="object-position: center center" src="img/profiles/testimonial_alex.jpg" alt="user" />
-                                                </figure>
-                                                <span>Alex & Sarah</span>
-                                                <blockquote>
-                                                    <p>
-                                                        The universe blessed us with a wonderful, energetic, photographer
-                                                        for our engagment photos. We communicated and discussed on how it
-                                                        was going to go down and
-                                                        even visited the location beforehand.
-                                                    </p>
-                                                    <p>
-                                                        That evening was magical for both of us including Forrest. I'm very
-                                                        glad I had the chance to meet him because he made this
-                                                        proposal perfect and did an incredible job capturing the moment. I
-                                                        can't thank him enough!
-                                                    </p>
-                                                </blockquote>
-                                                </div>
-                                                </div>
-                                                <div class="item">
-                                                    <div class="testimony-slide active text-center">
-                                                        <figure>
-                                                            <img class="testimonial-img" style="object-position: center 60%" src="img/profiles/testimonial_lori.jpg" alt="user" />
+                                            </figure>
+                                            <span>Alex & Sarah</span>
+                                            <span>2021</span>
+                                            <blockquote>
+                                                <p>
+                                                    The universe blessed us with a wonderful, energetic, photographer
+                                                    for our engagment photos. We communicated and discussed on how it
+                                                    was going to go down and
+                                                    even visited the location beforehand.
+                                                </p>
+                                                <p>
+                                                    That evening was magical for both of us including Forrest. I'm very
+                                                    glad I had the chance to meet him because he made this
+                                                    proposal perfect and did an incredible job capturing the moment. I
+                                                    can't thank him enough!
+                                                </p>
+                                            </blockquote>
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="testimony-slide active text-center">
+                                            <figure>
+                                                <img class="testimonial-img" style="object-position: center 60%" src="img/profiles/testimonial_lori.jpg" alt="user" />
                                             </figure>
                                             <span>Lori Burns</span>
+                                            <span>2021</span>
                                             <blockquote>
                                                 <p>
                                                     Forrest is extremely professional with his work. His easy-going
@@ -338,6 +341,7 @@
                                                 <p>I highly recommend Forrest for any event, family photos, portraits
                                                     and special photos with your animal companions. Thank you Forrest!
                                                 </p>
+                                                <!-- <p>Highly recommend him for any event or family photos you need!</p> -->
                                             </blockquote>
                                         </div>
                                     </div>
