--- a/concerts.html
+++ b/concerts.html
@@ -18,10 +18,10 @@
 
     <!-- Facebook and Twitter integration -->
     <meta property="og:title" content="Concert Photos - Forrest Herman - Photographer + Filmmaker" />
-    <meta property="og:image" content="img/share-img.jpg" />
+    <meta property="og:image" content="img/share-img-concert.jpg" />
     <meta property="og:url" content="https://www.forrestherman.ca/" />
     <meta property="og:site_name" content="ForrestHerman.ca" />
-    <meta property="og:description" content="I'm a wedding photographer and filmmaker based in North Bay, ON. Capturing moments and memories. Weddings, engagements, events." />
+    <meta property="og:description" content="I'm a photographer and filmmaker based in Ontario. Capturing moments and memories. Weddings, engagements, events." />
     <meta name="twitter:title" content="" />
     <meta name="twitter:image" content="" />
     <meta name="twitter:url" content="" />
