profile photo update

--- a/about.html
+++ b/about.html
@@ -125,7 +125,8 @@
         </nav>
 
         <header id="fh5co-header" class="fh5co-cover cover-about fh5co-cover-sm"
-            style="background-image: url('img/profiles/about_me_header.jpg')" role="banner">
+            style="background-image: url('img/profiles/forrest/2022-07_L_003.jpg')" role="banner">
+            <!-- style="background-image: url('img/profiles/forrest/about_me_header.jpg')" role="banner"> -->
             <!-- <div class="overlay-light"></div>
                 <div class="fh5co-container">
                     <div class="row">
@@ -169,12 +170,22 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="container">
                 <div class="row no-margin flex-row">
-                    <div class="col-sm-6 img-container">
+                    <div class="col-sm-6 d-md-none img-container stack">
+                        <img class="about-img" src="img/profiles/forrest/2022-07_002.jpg" alt="" />
+                    </div>
+                    <div class="col-sm-6 img-container stack">
                         <img class="about-img" src="img/profiles/forrest_dundurn1.jpg" alt="" />
                     </div>
-                    <div class="col-sm-6 img-container">
+                    <div class="col-sm-6 img-container stack">
                         <img class="about-img" src="img/profiles/forrest_dundurn2.jpg" alt="" />
+                    </div>
+                </div>
+                <div class="row no-margin flex-row">
+                    <div class="col-sm-12 img-container stack">
+                        <img class="about-img" src="img/profiles/forrest/2022-07_L_005.jpg" alt="" />
                     </div>
                 </div>
             </div>
