--- a/contact.html
+++ b/contact.html
@@ -175,7 +175,7 @@
                         <!-- Contact Form -->
                         <form action="https://formspree.io/f/xyylwddn" method="POST">
                             <div class="row form-group">
-                                <div class="col-md-6 col-12 d-md-none">
+                                <div class="col-md-6 col-12 show-only-on-mobile">
                                     <h3>Contact Form</h3>
                                 </div>
                                 <input type="hidden" name="_subject" value="Contact Form Submission - forrestherman.ca" />
