wedding portfolio update

--- a/photos.html
+++ b/photos.html
@@ -128,7 +128,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-                        <span>Portraits</span>
+                        <span>Wedding</span>
                         <h2 class="portfolio">Portfolio</h2>
                         <!-- <p>
                                 Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
@@ -139,6 +139,27 @@
 
                 <div class="row gallery">
                     <div class="wrapper-gallery">
+                        <div class="portfolio-img-container animate-gallery"><img src="/img/portfolio/wedding_045.jpg" alt="" /></div>
+                        <div class="portfolio-img-container animate-gallery"><img src="/img/portfolio/wedding_047.jpg" alt="" /></div>
+                        <div class="portfolio-img-container animate-gallery"><img src="/img/portfolio/wedding_044.jpg" alt="" /></div>
+
+                        <div class="portfolio-img-container animate-gallery"><img src="/img/portfolio/wedding_043.jpg" alt="" /></div>
+                        <div class="portfolio-img-container animate-gallery"><img src="/img/portfolio/wedding_042.jpg" alt="" /></div>
+                        <div class="portfolio-img-container animate-gallery"><img src="/img/portfolio/wedding_041.jpg" alt="" /></div>
+
+                        <div class="portfolio-img-container animate-gallery"><img src="/img/portfolio/wedding_L_018.jpg" alt="" /></div>
+                        <div class="portfolio-img-container animate-gallery"><img src="/img/portfolio/wedding_L_020.jpg" alt="" /></div>
+                        <div class="portfolio-img-container animate-gallery"><img src="/img/portfolio/couple_L_008.jpg" alt="" /></div>
+
+                        <div class="portfolio-img-container animate-gallery"><img src="/img/portfolio/wedding_039.jpg" alt="" /></div>
+                        <div class="portfolio-img-container animate-gallery"><img src="/img/portfolio/wedding_050.jpg" alt="" /></div>
+                        <div class="portfolio-img-container animate-gallery"><img src="/img/portfolio/wedding_038.jpg" alt="" /></div>
+
+                        <div class="portfolio-img-container animate-gallery"><img src="/img/portfolio/wedding_036.jpg" alt="" /></div>
+                        <div class="portfolio-img-container animate-gallery"><img src="/img/portfolio/wedding_035.jpg" alt="" /></div>
+                        <div class="portfolio-img-container animate-gallery"><img src="/img/portfolio/wedding_037.jpg" alt="" /></div>
+
+
                         <div class="portfolio-img-container animate-gallery"><img src="/img/portfolio/wedding_002.jpg" alt="" /></div>
                         <div class="portfolio-img-container animate-gallery"><img src="/img/portfolio/wedding_004.jpg" alt="" /></div>
                         <div class="portfolio-img-container animate-gallery"><img src="/img/portfolio/wedding_003.jpg" alt="" /></div>
