--- a/footer.html
+++ b/footer.html
@@ -64,8 +64,8 @@
                     Forrest Herman
                     <!-- <a href="https://github.com/forrest-herman" target="_blank">Forrest Herman</a> -->
                     <br />
-                    <a href="mailto:forrestherman.ca@gmail.com?subject=Forrest Herman — Inquiry">
-                        forrestherman.ca@gmail.com </a>
+                    <a href="mailto:photography@forrestherman.ca?subject=Forrest Herman — Inquiry">
+                        photography@forrestherman.ca </a>
                     <br />
                     <a href="tel:7052032534"> (705) 203-2534</a>
                 </p>
