testimonial update, about page overhaul, styling changes, pricing updates

--- a/about.html
+++ b/about.html
@@ -142,11 +142,10 @@
                 </div> -->
         </header>
 
-        <div class="row fh5co-section below-image">
+        <div class="row fh5co-section below-image no-bottom-padding">
             <div class="container">
                 <div class="row no-margin">
-                    <div
-                        class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 text-center fh5co-heading fh5co-heading-sm animate-box">
+                    <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 text-center fh5co-heading fh5co-heading-sm animate-box">
                         <span>About Me</span>
                         <h2>Hey, I'm Forrest</h2>
                         <!-- <p>If you made it this far, it's likely you're considering me for your wedding. That's awesome, I look forward to meeting you and documenting your story.</p> -->
@@ -171,6 +170,8 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="row fh5co-section less-top-padding">
             <div class="container">
                 <div class="row no-margin flex-row">
                     <div class="col-sm-6 d-md-none img-container stack">
@@ -183,6 +184,33 @@
                         <img class="about-img" src="img/profiles/forrest_dundurn2.jpg" alt="" />
                     </div>
                 </div>
+            </div>
+            </div>
+            <div class="row fh5co-section fh5co-section-gray">
+                <div class="container">
+                    <div class="row no-margin flex-row">
+                        <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 text-center animate-box quote">
+                            <blockquote style="border-left: none;">
+                                <p>
+                                    What a delight it was to have Forrest join us, as our photographer on our wedding day.
+                                    He took the time to meet/video chat with us on many occasions.  During these meetings he asked carefully thought out questions related to our plans for the day.  He was very concise and methodical in his approach to planning for our day.
+                                </p>
+                                <p>
+                                    On the day of the wedding, we really appreciated Forrest’s calm demeanour, constant smile, sharp appearance, kindness and patience with our guests, children and ourselves.
+                                    Having seen our property ahead of time allowed him to conceive of some truly gorgeous photo opportunities.  It was nice that he took charge in that way, as our heads were quite full that day.
+                                </p>
+                                <p>
+                                    We greatly enjoyed viewing our photos while on our honeymoon, and were so happy with the images he captured. 
+                                    Thank you Forrest for all of your hard work and for being such a great human.
+                                </p>
+                            </blockquote>
+                            <span>— Jana & Kevin, 2022</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row fh5co-section">
+                <div class="container">
                 <div class="row no-margin flex-row">
                     <div class="col-sm-12 img-container stack">
                         <img class="about-img" src="img/profiles/forrest/2022-07_L_005.jpg" alt="" />
