--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="row animate-box">
-                            <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+                            <div class="col-md-8 col-md-offset-2 text-center fh5co-heading fh5co-heading-sm">
                                 <span>What could your experience look like?</span>
                                 <h2>Testimonials</h2>
                             </div>
@@ -300,6 +300,29 @@
                             <div class="col-md-12 animate-box">
                                 <div class="wrap-testimony">
                                     <div class="owl-carousel-fullwidth">
+                                        <div class="item">
+                                            <div class="testimony-slide active text-center">
+                                                <figure>
+                                                    <img class="testimonial-img" style="object-position: center 73%" src="img/profiles/testimonial_jana_kevin.jpg" alt="user" />
+                                                </figure>
+                                                <span>Jana & Kevin</span>
+                                                <span>2022</span>
+                                                <blockquote>
+                                                    <p>
+                                                        What a delight it was to have Forrest join us, as our photographer on our wedding day.
+                                                        He took the time to meet/video chat with us on many occasions.  During these meetings he asked carefully thought out questions related to our plans for the day.  He was very concise and methodical in his approach to planning for our day.
+                                                    </p>
+                                                    <p>
+                                                        On the day of the wedding, we really appreciated Forrest’s calm demeanour, constant smile, sharp appearance, kindness and patience with our guests, children and ourselves.
+                                                        Having seen our property ahead of time allowed him to conceive of some truly gorgeous photo opportunities.  It was nice that he took charge in that way, as our heads were quite full that day.
+                                                    </p>
+                                                    <p>
+                                                        We greatly enjoyed viewing our photos while on our honeymoon, and were so happy with the images he captured. 
+                                                        Thank you Forrest for all of your hard work and for being such a great human.
+                                                    </p>
+                                                </blockquote>
+                                            </div>
+                                        </div>
                                         <div class="item">
                                             <div class="testimony-slide active text-center">
                                                 <figure>
@@ -424,7 +447,7 @@
                                 </div>
                                 <div class="col-md-10 feature-copy">
                                     <h3>Engagements + Couples</h3>
-                                    <p>Engagement, proposal and couples sessions begin at $150. Engagement sessions are complimentary with most wedding packages.</p>
+                                    <p>Engagement, proposal and couples sessions begin at $200. Engagement sessions are complimentary with most wedding packages.</p>
                                     <p><a href="offerings#couples">Explore packages</a></p>
                                 </div>
                             </div>
