--- a/offerings.html
+++ b/offerings.html
@@ -166,7 +166,7 @@
                     </div>
                     <div class="col-md-7 order-md-1 text-center fh5co-heading fh5co-heading-sm animate-box">
                         <h2 style="text-transform: uppercase">Weddings + Elopements</h2>
-                        <p>Packages begin at $900</p>
+                        <p>Packages begin at $1400</p>
                         <!-- <p>Elopement packages begin at $500 and Wedding Packages begin at $1000</p> -->
                         <p style="color: black; font-style: normal">
                             I offer a variety of wedding packages varying from adventurous elopements, to larger events.
@@ -186,7 +186,7 @@
                 <div class="row fh5co-section less-vertical-padding">
                     <div class="text-center fh5co-heading fh5co-heading-sm animate-box">
                         <h2 style="text-transform: uppercase">Engagements + Proposals</h2>
-                        <p>Engagements, proposals, and couple sessions begin at $200</p>
+                        <p>Couple sessions begin at $250; Engagements & Proposals begin at $300</p>
                         <p style="color: black; font-style: normal">
                             Whether you're planning a love story for today or the future, this session is for you.
                             Capture stunning visuals you and your partner will cherish forever.
@@ -222,7 +222,7 @@
                 <div class="row fh5co-section less-vertical-padding">
                     <div class="text-center fh5co-heading fh5co-heading-sm animate-box">
                         <h2 style="text-transform: uppercase">Family Sessions</h2>
-                        <p>Documentary family sessions begin at $250</p>
+                        <p>Documentary family sessions starting at $275</p>
                         <p style="color: black; font-style: normal">
                             This session is for families who want to freeze their memories in time. I want you to have a
                             time capsule to cherish and bring you nostalgia for years to come. We’ll
