--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                                 <div class="col-md-10 feature-copy">
                                     <h3>Weddings + Elopements</h3>
                                     <p style="margin-bottom: 10px">
-                                        My wedding packages begin at $900. Packages range from just a few hours to a full day's worth of photo-journalism coverage. All collections include individually
+                                        Packages range from just a few hours to a full day's worth of photo-journalism coverage. All collections include individually
                                         retouched digital images, an online gallery and an unlimited print release. Contact me for a custom quote.
                                     </p>
                                     <p>
@@ -447,7 +447,7 @@
                                 </div>
                                 <div class="col-md-10 feature-copy">
                                     <h3>Engagements + Couples</h3>
-                                    <p>Engagement, proposal and couples sessions begin at $200. Engagement sessions are complimentary with most wedding packages.</p>
+                                    <p>Engagement, proposal and couples sessions begin at $300. Engagement sessions are complimentary with most wedding packages.</p>
                                     <p><a href="offerings#couples">Explore packages</a></p>
                                 </div>
                             </div>
@@ -479,7 +479,7 @@
                                 <div class="col-md-10 feature-copy">
                                     <h3>Proffessional Headshots</h3>
                                     <p>
-                                        Ideal for those who are serious about their professionalism and corporate appearance. A quality headshot guarantees that you will stand out among the rest.
+                                        Ideal for those who are serious about their professionalism and corporate appearance. A quality headshot guarantees that you will stand out among the rest. Sessions begin at $180.
                                         <!-- Includes one wardrobe change. -->
                                     </p>
                                     <p><a href="contact">Let's talk</a></p>
